Basic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
        - name: hello-service
          image: hello-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
