Basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-srv
spec:
  selector:
    app: hello-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
