Basic/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: hello-srv.hello.svc.cluster.local
            port:
              number: 8080
